# legendary-sensor

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig
main/: CMakeLists.txt  cpp_pthread.cpp
main/code/: espfile.cpp  espfile.h  mqttclient.cpp  mqttclient.h  rtos_semaphore.h  spifs.cpp  spifs.h  wifi.cpp  wifi.h
main/code/aws/: aws.cpp  aws.h  awsconnection.cpp  awsconnection.h  awsmessage.cpp  awsmessage.h  awspublishmessage.cpp  awspublishmessage.h  awsshadow.cpp  awsshadow.h
main/code/drivers/: ds18b20.cpp  ds18b20.h  i2cbus.cpp  i2cbus.h  onewirebus.cpp
main/code/drivers/bus/: onewirebus.h
main/data/: ha_config.json
